<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_console"
        android:icon="@drawable/ic_play_24dp"
        android:title="@string/flow_nav_console" />

    <item
        android:id="@+id/nav_nodes"
        android:icon="@drawable/ic_subscriptions_24dp"
        android:title="@string/flow_nav_nodes" />

    <item
        android:id="@+id/nav_routing"
        android:icon="@drawable/ic_routing_24dp"
        android:title="@string/flow_nav_routing" />

    <item
        android:id="@+id/nav_diagnostics"
        android:icon="@drawable/ic_logcat_24dp"
        android:title="@string/flow_nav_diagnostics" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/flow_nav_settings" />
</menu>
